Added issue information
